# bizrobot

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  setup.py  setup_folder.py
digital_workforce/: README.md  pyproject.toml
digital_workforce/src/digital_workforce/: main.py
digital_workforce/src/digital_workforce/audit/: feedback_processor.py
digital_workforce/src/digital_workforce/core/: cognitive_graph.py
digital_workforce/src/digital_workforce/decision_engine/: evaluator.py  filters_engine.py
digital_workforce/src/digital_workforce/models/: reflection_model.py
digital_workforce/src/digital_workforce/utils/: logger.py  yaml_loader.py
scripts/: create_structure.py  run_dev.sh
src/: __init__.py
src/bizrobot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bizrobot/core/: __init__.py
src/bizrobot/examples/: bizrobot_langchain_agent.py
src/bizrobot/infra/: __init__.py
src/bizrobot/schemas/: __init__.py  capability.schema.json  dsl.schema.json  event.schema.json
src/bizrobot/services/: __init__.py
src/bizrobot/tests/: test_compile_validates.py
src/digital_workforce/: config.py
src/digital_workforce/audit/: audit_log.py  roi_tracker.py
src/digital_workforce/core/: cognitive_graph.py
src/digital_workforce/decision_engine/: evaluator.py  executor.py  feedback_manager.py  filters.py  registry.py  roi_evaluator.py
src/digital_workforce/interfaces/: decision_interface.py  tool_interface.py
src/digital_workforce/mcp/: registry.py  tool_executor.py
src/digital_workforce/models/: action_model.py  (+2 more)
(+30 files in other folders)
