[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bizrobot"
version = "0.1.0"
description = "LLM-powered autonomous business operations agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain>=0.2.14",
  "langchain-openai>=0.1.8",
  "langgraph>=0.0.15",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "requests>=2.32.0",
  "PyYAML>=6.0",
  "chromadb>=0.5.0",
  "pydantic>=2.8.0",
  "openai>=1.37.0",
  "playwright>=1.47.0",
  "tenacity>=8.3.0"
]

[tool.setuptools.packages.find]
where = ["src"]
